--- a/0-bootstrap/single-cluster/2-services/argocd/instances/ibm-platform-navigator-instance.yaml
+++ b/0-bootstrap/single-cluster/2-services/argocd/instances/ibm-platform-navigator-instance.yaml
@@ -31,5 +31,4 @@ spec:
               version: "2021.2.1"
               replicas: 2
               storage:
-                class: managed-nfs-storage
-
+                class: ocs-storagecluster-cephfs
