--- a/0-bootstrap/single-cluster/3-apps/kustomization.yaml
+++ b/0-bootstrap/single-cluster/3-apps/kustomization.yaml
@@ -1,13 +1,13 @@
 resources:
 - argocd/ace/cicd.yaml
 - argocd/ace/dev.yaml
-#- argocd/ace/stage.yaml
-#- argocd/ace/prod.yaml
+- argocd/ace/stage.yaml
+- argocd/ace/prod.yaml
 
 - argocd/mq/cicd.yaml
 - argocd/mq/dev.yaml
-#- argocd/mq/stage.yaml
-#- argocd/mq/prod.yaml
+- argocd/mq/stage.yaml
+- argocd/mq/prod.yaml
 
 #- argocd/apic/cicd.yaml
 #- argocd/apic/dev.yaml
